...
            "value" : "Guide"
          }
        },
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "이용 안내"
          }
        }
      }
    },
    "root.menu.myInfo" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "버전 %@"
          }
        }
      }
    },
    "tab.more" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "More"
          }
        },
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "더보기"
...
